--- a/com.github.phoswald.sample.mydsl/pom.xml
+++ b/com.github.phoswald.sample.mydsl/pom.xml
@@ -5,6 +5,7 @@
 		<groupId>com.github.phoswald.sample.mydsl</groupId>
 		<artifactId>com.github.phoswald.sample.mydsl.parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../com.github.phoswald.sample.mydsl.parent</relativePath>
 	</parent>
 	<artifactId>com.github.phoswald.sample.mydsl</artifactId>
 	<packaging>jar</packaging>
