--- a/com.github.phoswald.sample.mydsl.ide/pom.xml
+++ b/com.github.phoswald.sample.mydsl.ide/pom.xml
@@ -22,7 +22,7 @@
 				<version>3.3.0</version>
 				<executions>
 					<execution>
-						<?m2e ignore?>
+						<!-- <?m2e ignore?> -->
 						<id>add-source</id>
 						<phase>initialize</phase>
 						<goals>
